samples/_failures_safe/1761521222_fd4a84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c92d057a.c: In function ‘parser_advance’:
./samples/SAFE/__tmp_c92d057a.c:163:50: error: expected ‘)’ at end of input
  163 |     if (parser->current_token < parser->tokenizer
      |        ~                                         ^
      |                                                  )
./samples/SAFE/__tmp_c92d057a.c:163:5: error: expected declaration or statement at end of input
  163 |     if (parser->current_token < parser->tokenizer
      |     ^~
